Fix baseline alignment

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -16,7 +16,7 @@ form,
 
     display: inline-flex;
     margin-bottom: $pad / 2;
-    align-items: center;
+    align-items: baseline;
 
   }
 
